# tms32reader

./: COPYING  LICENSE  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac
include/: TDateConverter.h  TException.h  TFloatSignal.h  TMatlabSave.h  TTms32Reader.h  extalg.h  unilib.h
src/: Makefile.am  Makefile.in  TDateConverter.cpp  TFloatSignal.cpp  TMatlabSave.cpp  TTms32Reader.cpp  extalg.cpp  tms32_reader.cpp  unilib.cpp
